# canary

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/src/canary_server/: __init__.py  __main__.py  alerting.py  config.py  fingerprint.py  main.py  models.py  seed.py
backend/src/canary_server/routes/: __init__.py  alerts.py  errors.py  events.py  runs.py  stats.py
backend/src/canary_server/store/: __init__.py  base.py  clickhouse_store.py  duckdb_store.py
backend/tests/: test_alerting.py  test_duckdb_store.py  test_events_route.py
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
dashboard/src/: App.tsx  index.css  main.tsx
dashboard/src/api/: client.ts
dashboard/src/components/: AlertRuleForm.tsx  ErrorGroupCard.tsx  Layout.tsx  StatCard.tsx  TraceTimeline.tsx
dashboard/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  skeleton.tsx  table.tsx
dashboard/src/hooks/: useAlerts.ts  useErrors.ts  useRuns.ts  useStats.ts
dashboard/src/lib/: format.ts  utils.ts
dashboard/src/pages/: AlertRules.tsx  ErrorFeed.tsx  RunDetail.tsx  RunsList.tsx  StatsOverview.tsx
sdk/: README.md  pyproject.toml
sdk/src/canary/: __init__.py  client.py  config.py  fingerprint.py  local_server.py  tracing.py  transport.py
sdk/src/canary/instrumentation/: __init__.py  langchain.py  openai.py
sdk/tests/: conftest.py  test_openai_instrumentation.py  test_span_context.py  test_trace_decorator.py  test_transport.py
