[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "canary-server"
version = "0.1.0"
description = "Canary collector + dashboard server (FastAPI + DuckDB)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Canary" }]

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "duckdb>=0.10",
    "pydantic>=2.6",
    "httpx>=0.27",
]

[project.optional-dependencies]
# ClickHouse production store (stubbed in v0.1).
clickhouse = ["clickhouse-connect>=0.7"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
canary-server = "canary_server.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/canary_server"]

[tool.hatch.build.targets.wheel.force-include]
"src/canary_server/static" = "canary_server/static"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
