[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "canary-sdk"
version = "0.1.0"
description = "Sentry for AI agents. Error tracking, not analytics."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Canary" }]
keywords = ["ai", "agents", "observability", "error-tracking", "llm", "tracing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Zero heavy deps. httpx for transport, pydantic for models, duckdb for local mode.
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
    "duckdb>=0.10",
]

[project.optional-dependencies]
# opentelemetry is optional — used only for trace-context propagation when present.
otel = ["opentelemetry-api>=1.24"]
# The local dashboard server. Pulls in the backend package for in-process serving.
server = ["canary-server"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "canary-server",
]

[project.urls]
Homepage = "https://github.com/canary-dev/canary"
Repository = "https://github.com/canary-dev/canary"

[tool.hatch.build.targets.wheel]
packages = ["src/canary"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
